# kzg_ceremony_halo2

./: Cargo.toml  LICENSE  README.md  run_test.sh  setup.sh
lib/kzg_ceremony_circuit/: Cargo.toml
lib/kzg_ceremony_circuit/src/: circuit_g1_mul.rs  circuit_g2_mul.rs  context.rs  lib.rs  range_info.rs
lib/kzg_ceremony_circuit/src/circuit_utils/: base_chip.rs  fq2.rs  general_scalar_ecc_chip.rs  integer_chip.rs  mod.rs  range_chip.rs
lib/kzg_ceremony_prover/: Cargo.toml
lib/kzg_ceremony_prover/src/: lib.rs  serialization.rs
lib/kzg_ceremony_types/: Cargo.toml
lib/kzg_ceremony_types/src/: serialization.rs
src/: assign.rs  circuit.rs  circuit_g1_mul.rs  circuit_g2_mul.rs  context.rs  main.rs  serialization.rs  utils.rs
src/circuit_utils/: base_chip.rs  ecc_chip.rs  fq2.rs  general_scalar_ecc_chip.rs  integer_chip.rs  mod.rs  range_chip.rs
src/circuits/: assign.rs  circuit_g1_mul.rs  circuit_g2_mul.rs  context.rs  mod.rs  range_info.rs  utils.rs
src/client/: contribute.rs  message.rs  mod.rs  prover.rs  request.rs  verify_transcript.rs
